--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ci.jenkins.aws</groupId>
     <artifactId>proj3</artifactId>
-    <version>1.0-RAMA</version>
+    <version>1.0-JAGA</version>
     <packaging>pom</packaging>
-    <name>Project Build</name>
+    <name>Auto Build</name>
 
     <modules>
         <module>project</module>
